clang/test/BSC/Negative/SafeZone/trait_member_function/trait_member_function.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F {
  _Unsafe int foo(This* this);
  _Unsafe int goo(This* this);
  _Unsafe int* _Owned hoo(This* _Owned this);
};

_Trait G {
  _Safe int* _Owned ioo(This* _Owned this);
  _Safe int* _Owned joo(This* _Owned this);
  _Safe int* _Owned koo(This* _Owned this);
};

_Unsafe int int::foo(int* this) { 
  return 1;
}

int int::goo(int* this) {   // OK
  return 1;
}

_Safe int* _Owned int::hoo(int* _Owned this) {   // OK
  return this;
}

_Safe int* _Owned int::ioo(int* _Owned this) {  // OK
  return this;
}

_Unsafe int* _Owned int::joo(int* _Owned this) {
  return this;
}

int* _Owned int::koo(int* _Owned this) {
  return this;
}

_Impl _Trait F for int;  // expected-warning {{incompatible function pointer types initializing 'int *_Owned (*)(void *_Owned)' with an expression of type '_Safe int *_Owned (*)(void *_Owned)'}}

_Impl _Trait G for int; // expected-warning 2 {{incompatible function pointer types initializing '_Safe int *_Owned (*)(void *_Owned)' with an expression of type 'int *_Owned (*)(void *_Owned)'}}
int main() {
  int a = 1;
  int *p = &a;
  _Trait F* f = p;
  _Safe {
    f->goo();    // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
                    // expected-error@-1 {{_Unsafe function call is forbidden in the safe zone}}
    int::foo(p); // expected-error {{_Unsafe function call is forbidden in the safe zone}}
  }
  return 0;
}
